--- a/index.html
+++ b/index.html
@@ -1,29 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<meta name="description" content="This is greg's list">
 	<title>Greg's List</title>
+
+	<!--Font-->
+	<link href="http://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 </head>
 
 <body>
-	<header class="group">
-		<h1>Greg's List</h1>
-		<nav class="navbar navbar-fixed-top">
-			<a href="">Post</a>
-			<a href="">Account</a>
+	<header>
+		<a class="rl-logo">
+			<h1>Greg's List</h1>
+		</a>
+		<nav class="top-nav">
+			<a href="" class="nav-link">Post</a>
+			<a href="" class="nav-link">Account</a>
 		</nav>
 	</header>
 
-	<form>
-		<input type="text" name="searchsofjobs" placeholder="Search software jobs">
-		<input type="image" src="images/magnifying-glass.png">
-	</form>
+	<section class="search-section">
+		<form action="#">
+			<label for="search">Search Jobs</label>
+			<input type="text" id="search" placeholder="Search software jobs" />
+			<button type="submit" class="search-button">
+				<img src="images/magnifying-glass.png" class="magnifying-glass-icon">
+			</button>
+		</form>
+	</section>
+
+	<nav class="pages">
+		<a class="pages-button">&lt; prev</a>
+		<span class="pages-display">1 to 100 of 179</span>
+		<a class="pages-button">next &gt;</a>
+	</nav>
 
 	<main>
-		<p>June 22 <a href="#">Technical Project Manager</a> Midtown East</p>
-		<p>June 21 <a href="#">Front Developer</a> SoHo<p>
-		<p>June 20 <a href="#">Senior Python Developer/Cofounder</a> Flatiron</p>
+		<ul class="listings">
+			<li class="listing">
+				<span class="listing-date">June 22</span>
+				<a href="#" class="listing-title">Technical Project Manager</a>
+				<span class="listing-location">Midtown East</span>
+			</li>
+			<li class="listing">
+				<span class="listing-date">June 21</span>
+				<a href="#" class="listing-title">Frontend Developer</a>
+				<span class="listing-location">SoHo</span>
+			</li>
+			<li class="listing">
+				<span class="listing-date">June 20</span>
+				<a href="#" class="listing-title">Senior Python Developer / Cofounder</a>
+				<span class="listing-location">Flatiron</span>
+			</li>	
+		</ul>	
 	</main>
 
 </body>
